fix horizontal scrolling

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,3 +26,8 @@ body,
   box-sizing: border-box;
   overflow-x: clip;
 }
+
+
+* {
+  box-sizing: border-box;
+}
